--- a/IQWorld/resources/css/animation.css
+++ b/IQWorld/resources/css/animation.css
@@ -1,1 +1,8 @@
-
+@keyframes growAndRotate {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+    to {
+        transform: scale(2) rotate(10deg);
+    }
+}
