--- a/IQWorld/resources/css/specific.css
+++ b/IQWorld/resources/css/specific.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+SA+Beginner:wght@400;500&family=Fredoka&display=swap');
+
+
 body {
     margin: 0;
 }
@@ -306,6 +309,54 @@ img {
 .search-button:hover {
   background-color: #45a049;
 }
+
+.progress-container {
+  width: 50%;
+  height: 30px;
+  background-color: #ddd;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,.2);
+  font-family: 'Fredoka', sans-serif;
+}
+
+.progress-bar {
+  height: 30px;
+  text-align: right;
+  line-height: 30px;
+  color: white;
+  border-radius: 0px;
+}
+
+.progress-circle {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.progress-circle svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.progress-circle svg circle {
+  fill: none;
+  transform: translate(25%, 60%);
+  stroke-width: 5;
+}
+
+.progress-circle svg circle:nth-of-type(1) {
+  stroke: #dfe3e6;
+}
+
+.progress-circle svg circle:nth-of-type(2) {
+  stroke: #4bc0c8;
+  stroke-dasharray: calc(628 * var(--percentage) / 100) 440;
+}
+
 
   /* Style pour les écrans étroits */
 @media screen and (max-width: 900px) {
