--- a/IQWorld/resources/css/specific.css
+++ b/IQWorld/resources/css/specific.css
@@ -2,7 +2,14 @@
 
 
 body {
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+footer {
+  margin-top: auto;
 }
 
 img {
@@ -355,6 +362,37 @@ img {
 .progress-circle svg circle:nth-of-type(2) {
   stroke: #4bc0c8;
   stroke-dasharray: calc(628 * var(--percentage) / 100) 440;
+}
+
+.footer-container {
+  background-color: #333;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+}
+
+.footer-links {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.footer-links a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+.footer-links a:hover {
+  color: #ddd;
+}
+
+.footer-text {
+  font-size: 100%;
+  font-family: 'Fredoka', sans-serif;
 }
 
 
