Ajout page allGames

--- a/IQWorld/resources/css/container.css
+++ b/IQWorld/resources/css/container.css
@@ -32,3 +32,10 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.containerAlignLeft {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    flex-wrap: wrap;
+}
